# pydra-mrtrix3

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  generate.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  pythonpackage.yml
docs/: conf.py  index.rst
fileformats-medimage-mrtrix3/: pyproject.toml
fileformats-medimage-mrtrix3-extras/: pyproject.toml
fileformats-medimage-mrtrix3-extras/fileformats/extras/medimage_mrtrix3/: _version.py  converters.py  image.py  tracks.py
fileformats-medimage-mrtrix3/fileformats/medimage_mrtrix3/: image.py  in_out.py
fileformats-medimage-mrtrix3/fileformats/medimage_mrtrix3/tests/: test_mime.py
pydra/tasks/MRtrix3/: __init__.py  base.py
pydra/tasks/mrtrix3/: __init__.py  _version.py  base.py  conftest.py  utils.py
pydra/tasks/mrtrix3/manual/: mrcalc_.py
pydra/tasks/mrtrix3/tests/: test_utils.py
related-packages/fileformats/: conftest.py  pyproject.toml
related-packages/fileformats-extras/: conftest.py  pyproject.toml
related-packages/fileformats-extras/fileformats/extras/medimage_mrtrix3/: converters.py  gradients.py  image.py  tracks.py
related-packages/fileformats-extras/fileformats/extras/medimage_mrtrix3/tests/: test_converters.py
related-packages/fileformats/fileformats/medimage_mrtrix3/: __init__.py  dwi.py  image.py  in_out.py  track.py
