[metadata]
author = Nipype developers
author_email = TODO
description = Pydra tasks for MRtrix3

[options]
python_requires = >=3.7
install_requires =
    pydra

packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/tasks/MRtrix3/_version.py
versionfile_build = pydra/tasks/MRtrix3/_version.py
tag_prefix =
parentdir_prefix =
